--- a/source/index.html
+++ b/source/index.html
@@ -76,9 +76,8 @@
   </header>
 
   <main class="page-content">
-
+    <div class="screen__effect"></div>
     <section class="animation-screen"></section>
-
     <section class="screen screen--hidden screen--intro" id="top">
       <div class="screen__wrapper">
         <div class="intro">
